  I'd like to extend this functionality to other widgets.
- Changed the way file monitoring works: instead of auto-refreshing an
  image it now solely generates a custom "file-changed" signal and it's
  now up to the application developer to do what he wants with that.
- Renamed all internally used items of data attached to widgets to "_*".

* Fri Sep 14 2012 Thunor <thunorsif@hotmail.com>
- Added the "column-sort-function" tag attribute to the tree widget to
  support natural sorting algorithms on columns of type string.
- Stopped widget_tree_input_by_command/items stripping space from the
  input data: if space was input then it was the app. dev's choice.
- Added the "auto-sort", "sort-column" and "sort-type" tag attributes
  to the tree widget to manage auto-sorting after filling.
- Re-engineered the statusbar last message retrieval code.

* Thu Sep 13 2012 Thunor <thunorsif@hotmail.com>
- New widget: <expander>.
- Added examples/expander/expander.

* Wed Sep 12 2012 Thunor <thunorsif@hotmail.com>
- Added the "column-type" tag attribute to the tree widget to support
  setting int64, uint64, double and string data types.
- Added the "selected-row" tag attribute to the tree widget to enable
  selecting a default row on initialisation and refresh.
- Removed the tree widget's default indentation in column 0.
- Added the "column-header-active" and "column-visible" tag attributes
  to the tree widget enabling column-header locking and column hiding.
- Tidied-up the tree widget's signal handling and added support for the
  selection object's "changed" signal.

* Mon Sep 10 2012 Thunor <thunorsif@hotmail.com>
- Updated examples/list/*.
- Updated the list widget's save function as it wasn't saving all items.
- Rewrote the widget hiding and showing functions to hide/show all of
  the components of widgets in viewports and scrolled windows.

* Sun Sep 9 2012 Thunor <thunorsif@hotmail.com>
- Refactored the list widget although I don't recommend using it as you